# MyExecProject2020

./: README.md
JsonCppDemo/: README.md
JsonCppDemo/src/: demo1.cpp
makefile_project/ASimpleMakefileProject/: README.md  makefile
makefile_project/ASimpleMakefileProject/include/: classA.h
makefile_project/ASimpleMakefileProject/include2/: test2.h
makefile_project/ASimpleMakefileProject/src/: demo1.cpp
makefile_project/ASimpleMakefileProject/src2/: classA.cpp
uWebSocketDemo1/: CMakeLists.txt  Makefile  README.md
uWebSocketDemo1/examples/: Demo1.cpp  test1.cpp
uWebSocketDemo2/: Makefile  README.md
uWebSocketDemo2/examples/: Demo1.cpp  test1.cpp
uWebSocketDemo2/examples/lib_json/: CMakeCache.txt  Makefile  cmake_install.cmake
uWebSocketDemo4/: Makefile  README.md
uWebSocketDemo4/examples/: Authen.hpp  MongoDB.cpp  MongoDB.hpp  NetMessageType.h  StringIconv.h  Users.cpp  Users.hpp  asyncMongo.hpp  main.cpp  stdafx.h
uWebSocketDemo4/uSockets/: Makefile  echo_server  hammer_test  http_load_test  http_server  peer_verify_test
uWebSocketDemo4/uWebSocketsInclude/: App.h  WebSocket.h
